Fixing navbar and collapse button

--- a/style.css
+++ b/style.css
@@ -3,23 +3,33 @@ body{
     color: #f498b8;
     font-family: 'Quicksand', sans-serif;
     text-align: center;
+    font-weight: 100;
     font-size: 1.5rem;
+    line-height: 2;
 }
-#MainNavBar .navbar-brand{
+#mainNavbar .navbar-brand{
     color:#EA1C2C;
 }
 
-#MainNavBar, #MainNavBar .navbar-brand{
+#mainNavbar, #mainNavbar .navbar-brand{
     font-size: 1.5rem;
     font-weight: 100;
 }
 
-#MainNavBar .nav-link{
-    color:#ffff;
+#mainNavbar .nav-link{
+    color: white;
+    text-align: left;
 }
 
-#MainNavBar .nav-link:hover{
+#mainNavbar .nav-link:hover {
     color:#EA1C2C;
+}
+
+
+
+.scrolled {
+    background:  rgb(222,192,222);
+    transition: background 500ms;
 }
 
 h1{
@@ -29,13 +39,6 @@ h1{
 span, h2{
     color: #EA1C2C;
     font-size: 1em;
-}
-.bg-dark {
-      background-color: rgba(255, 255, 255, 0) !important;
-  }
-
-.bg-dark.scrolled {
-    background-color: rgb(222,192,222) !important;
 }
 
 
